# yacodebase-mcp

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: codebase-search.mdc
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-05-20-global-embedding-config.md  2026-05-21-codebase-mcp-improvements.md  2026-05-22-agent-install-hook-rename.md
docs/superpowers/specs/: 2026-05-20-ast-chunking-design.md  2026-05-20-codebase-search-mcp-design.md  2026-05-20-global-embedding-config-design.md  2026-05-22-agent-install-hook-rename-design.md
src/codebase_mcp/: agents.py  ast_chunker.py  cli.py  hook.py  indexer.py  knowledge.py  searcher.py  server.py  store.py
src/yacodebase_mcp/: agents.py  ast_chunker.py  cli.py  indexer.py  settings.py
tests/: conftest.py  test_agents.py  test_ast_chunker.py  test_cli.py  test_hook.py  test_incremental.py  test_indexer.py  test_integration.py  test_searcher.py  test_server_tools.py  test_store.py
