[project]
name = "codebase-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "qdrant-client>=1.9",
    "openai>=1.0",
    "click>=8.0",
    "rich>=13.0",
    "tiktoken>=0.7",
]

[project.scripts]
codebase-mcp = "codebase_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
