[project]
name = "yacodebase-mcp"
version = "0.1.0"
description = "CLI + MCP server that indexes local codebases into Qdrant using OpenAI-compatible embeddings, then exposes semantic search to Claude Code and other MCP clients"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "gzamboni", email = "gzamboni@gmail.com" }]
keywords = ["mcp", "semantic-search", "qdrant", "embeddings", "claude", "codebase"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "qdrant-client>=1.9",
    "openai>=1.0",
    "click>=8.0",
    "rich>=13.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-hcl>=0.23",
]

[project.urls]
Homepage = "https://github.com/gzamboni/codebase-mcp"
Repository = "https://github.com/gzamboni/codebase-mcp"
Issues = "https://github.com/gzamboni/codebase-mcp/issues"

[project.scripts]
codebase-mcp = "codebase_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codebase_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
